# gemma-cli

./: .gitignore  CAPABILITIES.md  LICENSE  README.md  docker-compose.yml  gemma-cli-roadmap.md  plan-startup-trim.md  plan.md  pyproject.toml  setup.ps1  setup.sh
.benchmarks/Linux-CPython-3.10-64bit/: 0001_baseline-phase6.2.json
docs/: PLAN_commands_package.md  architecture.md  migrating-from-ollama.md  migrating-from-redis.md  rag.md  storage.md
examples/profiles/: code.toml  fast.toml  gemma4e2b.toml  low-memory.toml  verbose.toml
gemma/: cache.py  chunking.py  client.py  clipboard.py  completion.py  config.py  embeddings.py  history.py  main.py  output.py  platform.py  redaction.py  redis_pool.py  safety.py  session.py
gemma/agent/: __init__.py  cache.py  planner.py
gemma/backends/: __init__.py  base.py  lmstudio_backend.py  ollama_backend.py  ollama_compat.py
gemma/commands/: __init__.py  clipboard.py  completion.py  explain.py  git.py  memory.py  model.py  rag.py  shell.py  storage.py  tools.py
gemma/memory/: __init__.py  condensation.py  context.py  manager.py  models.py  retrieval.py  store.py
gemma/rag/: __init__.py  _math.py  indexer.py  manifest.py  namespace.py  retrieval.py  store.py
gemma/storage/: __init__.py  sqlite_cache.py  sqlite_db.py  sqlite_memory.py  sqlite_rag.py
gemma/tools/: __init__.py  audit.py  capabilities.py  dispatcher.py  planning.py  registry.py  subprocess_runner.py
gemma_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_backend_base.py  test_backend_lmstudio.py  test_chunk_02_perf.py  test_chunking.py  test_client.py  test_clipboard.py  test_cmd_explain.py  test_cmd_git.py  test_cmd_model.py  test_cmd_rag.py  test_cmd_shell.py  test_cmd_storage.py  test_completion.py  test_condensation.py  test_context.py  test_history.py  test_main.py  test_main_agent_parallel.py  test_manager.py  test_memory_models.py  test_planner.py  test_platform.py  test_platform_defaults.py  test_rag_indexer.py  test_rag_manifest.py  test_rag_namespace.py  test_rag_retrieval.py  test_rag_store.py  test_redaction.py  test_retrieval.py  test_safety.py  test_session.py  test_storage_factory.py  test_storage_sqlite_cache.py  test_storage_sqlite_memory.py  test_storage_sqlite_rag.py  test_store.py  test_tools_audit.py  test_tools_builtins_fs.py  (+9 more)
tests/bench/: conftest.py  test_bench_agent_loop.py  test_bench_http_get.py  test_bench_indexer.py  test_bench_mmr.py  test_bench_rag_as_tool.py  test_bench_retrieval.py  (+2 more)
(+15 files in other folders)
