[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma-cli"
version = "0.1.0"
description = "Local CLI for Google's Gemma 4 model via Ollama, with Redis-backed recursive memory."
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "ollama>=0.5",   # 0.5+ required for think= parameter (extended thinking)
    "rich>=13.7",
]

[project.optional-dependencies]
memory = [
    "redis>=5.0",
    "numpy>=1.24",
]
dev = [
    "pytest>=8.0",
    "fakeredis>=2.20",
]

[project.scripts]
gemma = "gemma.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["gemma*"]
