[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gemma-cli"
version = "0.2.0"
description = "Local CLI for Google's Gemma 4 model via LM Studio (with optional Ollama backend), with Redis-backed recursive memory."
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "lmstudio>=1.3",     # native SDK: TTL/JIT loading, reasoning_content, structured output
    "rich>=13.7",
    "numpy>=1.24",        # used by embeddings + memory retrieval
]

[project.optional-dependencies]
ollama = [
    "ollama>=0.5",        # legacy backend; install only if `backend = "ollama"`
]
memory = [
    "redis>=5.0",
]
agent = [
    "trafilatura>=1.10",
    "ddgs>=9.0",          # DuckDuckGo backend for web_search
]
dev = [
    "pytest>=8.0",
    "fakeredis>=2.20",
    "ollama>=0.5",        # tests cover both backends
]
bench = [
    "pytest-benchmark>=4.0",
]

[project.scripts]
gemma = "gemma.main:app"

[tool.hatch.build.targets.wheel]
packages = ["gemma"]

# PEP 735 dependency groups. ``uv sync`` installs the ``dev`` group by default;
# CI / production installs pick only the optional-dependencies they need.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "fakeredis>=2.20",
    "ollama>=0.5",
    "redis>=5.0",
    "trafilatura>=1.10",
    "ddgs>=9.0",
    "pytest-benchmark>=4.0",
]

# Benchmarks live under tests/bench/ but are excluded from the default
# test run. They require pytest-benchmark (optional "bench" extra) and
# produce wall-clock numbers that would be noisy in CI. Run them
# explicitly: ``uv run pytest tests/bench``. See docs/perf/benchmarks.md.
[tool.pytest.ini_options]
addopts = "--ignore=tests/bench"
